add day 5 and 6 tasks

--- a/pages/day3and4_page.html
+++ b/pages/day3and4_page.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>JS Day3 and Day4</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script src="./js/demo.js"></script>
-
     <!-- success/error -->
     <!-- <button onclick="changeImgToGreen()" type="button" id="success-btn" > Success Alert </button>
     <button onclick="changeImgToRed()" type="button" id ="error-btn" > Error Alert </button>
@@ -113,5 +111,6 @@
       </tr>
     </table> -->
 
+    <script src="/scripts/day3and4_script.js"></script>
     </body>
 </html>
